--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,53 @@
 /*  your css code here. If applicable */
+:root {
+    background-color: rgb(135, 206, 235);
+}
+
+.content {
+    margin: 20px;
+}
+
+article {
+    margin-bottom: 20px;
+}
+
+p {
+    padding: 10px;
+    margin: 0;
+}
+
+.first-child {
+    color: white;
+    background-color: black;
+}
+
+.nth-child {
+    /* Standard text color */
+}
+
+.last-child {
+    color: red;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    width: 50%;
+    padding: 10px;
+}
+
+.gray-bg:nth-child(odd) {
+    background-color: gray;
+}
+
+.font-size:first-child,
+.font-size:last-child {
+    font-size: 22px;
+}
+
+.pink-bg:nth-last-child(3) {
+    background-color: pink;
+}
